# rust-ci-cd-template

./: .markdownlint.yaml  Cargo.toml  NOTICE  README.md  deny.toml  rustfmt.toml  typos.toml
.github/: FUNDING.yaml  FUNDING.yml  dependabot.yaml
.github/workflows/: add_notice.yaml  auto_merge.yaml  build_and_release.yaml  bump_version.yaml  cache.yaml  cargo_attribution.yaml  cargo_deny.yaml  cargo_miri.yaml  cargo_semver_checks.yaml  cargo_update.yaml  check-if-lib.yaml  check_msrv.yaml  ci.yaml  crate_type.yaml  monthly.yaml  mothly.yaml  msrv.yaml  pre_release.yaml  publish.yaml  update_attributions.yaml  update_msrv.yaml  weekly.yaml
attribution/: self.toml
src/: main.rs
