[package]
name = "rust_ci_cd_template"                     # todo!("Change name")
description = "A rust ci/cd template for github" # todo!("Change description")
version = "0.1.0"
edition = "2021"
license = "CC0-1.0 OR MIT OR Apache-2.0"         # todo!("Change licenses")
rust-version = "1.59.0"                          # todo!("Change rust-version (MSRV) you want to support")

[dependencies]

# https://doc.rust-lang.org/cargo/reference/profiles.html
# https://github.com/johnthagen/min-sized-rust
[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true
