[package]
name = "rust-ci-cd-template"                                   # todo!("Change name")
description = "A rust ci/cd template for github"               # todo!("Change description")
version = "0.2.23"
edition = "2021"
license = "CC0-1.0 OR MIT OR Apache-2.0"                       # todo!("Change licenses")
repository = "https://github.com/ameknite/rust-ci-cd-template" # todo!("Change repository")
rust-version = "1.81.0"                                        # todo!("Change MSRV")

[dependencies]

# https://doc.rust-lang.org/cargo/reference/profiles.html
# https://github.com/johnthagen/min-sized-rust
[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true

[lints.rust]
# https://doc.rust-lang.org/rustc/lints/listing/allowed-by-default.html#allowed-by-default-lints
unsafe_code = "warn"
unsafe_op_in_unsafe_fn = "warn"
missing-abi = "warn"
missing_docs = "warn"

[lints.clippy]
# https://rust-lang.github.io/rust-clippy/master/
# pedantic
pedantic = { level = "warn", priority = -1 }
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

# restriction
undocumented_unsafe_blocks = "warn"
multiple_unsafe_ops_per_block = "warn"
allow_attributes = "warn"
